--- a/src/style.css
+++ b/src/style.css
@@ -13,5 +13,23 @@ canvas {
 
 #app {
   z-index: 1000;
+  color: white;
   position: absolute;
+}
+
+#options {
+  position: absolute;
+  z-index: 1000;
+  right: 10px;
+  bottom: 10px;
+  color: white;
+  font-size: 1.5rem;
+}
+#options > div > input {
+  width: 50px;
+  font-size: 1.2rem;
+}
+
+#circleR, #circleG, #circleB, #outlineR, #outlineG, #outlineB {
+  width: 30px;
 }
